2013-03-19  Ramon Novoa  <rnovoa@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql: Updated and fixed
	  some column types.

	* include/functions_alerts.php,
	  pandoradb.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Added support for on-demand module status
	  calculations.

2013-03-18  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_performance.php,
	include/help/ja/help_plugin_policy.php: Added new help files.
	
2013-03-16  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb_data.sql, pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql: Fixed a typo in the description of
	Internal Audit.

2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/*: added first version of new mobile console.
	
2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/javascript/jquery.form.js: updated to last version.
	
	* include/functions_reporting.php, include/functions_groups.php:
	added changes for to get the data as hash instead a html.

2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_events.php, include/functions_html.php,
	include/functions_graph.php, include/functions_reporting.php,
	operation/events/events_list.php, operation/events/events.php,
	operation/agentes/group_view.php: improved source code style.

2013-03-15 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/massive/massive_copy_modules.php: uploaded lost changes
	for previous fixed (days ago).
	
	* godmode/groups/group_list.php, include/graphs/functions_flot.php,
	include/graphs/fgraph.php, include/functions_agents.php,
	general/logon_ok.php: cleaned source code style.

2013-03-15  Mario Pulido <mario.pulido@artica.es>

	* include/help/en/help_plugin_policy.php
	include/help/es/help_plugin_policy.php: Added plugin policy help.

2013-03-15  Mario Pulido <mario.pulido@artica.es>
